Tag nova-powervm 6.0.2
There have been several fixes since we tagged 6.0.1.

Change-Id: Ifce2bdae0b2ace137bcca0d26af2e8618554f184

--- a/deliverables/_independent/nova-powervm.yaml
+++ b/deliverables/_independent/nova-powervm.yaml
@@ -26,5 +26,10 @@ releases:
       - repo: openstack/nova-powervm
         hash: e62fae699d47feacd7372573948722cd0036996c
         tarball-base: nova_powervm
+  - version: 6.0.2
+    projects:
+      - repo: openstack/nova-powervm
+        hash: f172fbdd50922ed46ebae16bf9c02ff16edf57aa
+        tarball-base: nova_powervm
 repository-settings:
   openstack/nova-powervm: {}
