--- a/deliverables/rocky/cinder.yaml
+++ b/deliverables/rocky/cinder.yaml
@@ -24,6 +24,10 @@ releases:
       - hash: b067a847cf2a14d450682d15f9555f0d5e9ca9c2
         repo: openstack/cinder
     version: 13.0.0.0rc2
+  - projects:
+      - hash: 41de06dcf6f1c84b6d4eb2f8d3b4f002d8c67f96
+        repo: openstack/cinder
+    version: 13.0.0.0rc3
 branches:
   - location: 13.0.0.0rc1
     name: stable/rocky
