nova: release rocky 18.0.0.0rc3
Depends-On: https://review.openstack.org/595890

Change-Id: Ifccefe04a00df3882ff0e77dc2a21ae3902eb844

--- a/deliverables/rocky/nova.yaml
+++ b/deliverables/rocky/nova.yaml
@@ -27,6 +27,10 @@ releases:
       - hash: aebb29ed710fb4b5b92a6efa99f1d3dbdcc48a0c
         repo: openstack/nova
     version: 18.0.0.0rc2
+  - projects:
+      - hash: 5bff489231c16e62f081267a5b433745dba12ded
+        repo: openstack/nova
+    version: 18.0.0.0rc3
 branches:
   - location: 18.0.0.0rc1
     name: stable/rocky
