--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -152,5 +152,9 @@ releases:
       - hash: f5051b4323d2df4c8477a87eb7ce705825fb6b86
         repo: openstack/openstackdocstheme
     version: 1.23.0
+  - projects:
+      - hash: 344b423e0192306f28c5948eb780961c1030988c
+        repo: openstack/openstackdocstheme
+    version: 1.23.1
 repository-settings:
   openstack/openstackdocstheme: {}
