--- a/deliverables/rocky/tripleo-puppet-elements.yaml
+++ b/deliverables/rocky/tripleo-puppet-elements.yaml
@@ -19,3 +19,10 @@ releases:
       - hash: eaebed2ab92c65a1dce55a1d1945bdc47c1e5022
         repo: openstack/tripleo-puppet-elements
     version: 9.0.0.0b3
+  - projects:
+      - hash: d9df3a3e2dbc910d335e5cc166a93b93ba2ad8b6
+        repo: openstack/tripleo-puppet-elements
+    version: 9.0.0.0rc1
+branches:
+  - location: 9.0.0.0rc1
+    name: stable/rocky
