--- a/deliverables/rocky/os-net-config.yaml
+++ b/deliverables/rocky/os-net-config.yaml
@@ -15,3 +15,10 @@ releases:
       - hash: 6641c9f8c0cb69e8495cb4360f50c5e048c50be1
         repo: openstack/os-net-config
     version: 9.1.0
+  - projects:
+      - hash: e12837353dc3668da7cfc575777ef197df4b0497
+        repo: openstack/os-net-config
+    version: 9.2.0
+branches:
+  - location: 9.2.0
+    name: stable/rocky
