--- a/deliverables/rocky/keystone.yaml
+++ b/deliverables/rocky/keystone.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: b625ccc42c4fd7e7a95cb54d6768a5a6fa3769db
         repo: openstack/keystone
     version: 14.0.0.0rc1
+  - projects:
+      - hash: c767e254979c96858a81cc4bbe8d9773d4dd539b
+        repo: openstack/keystone
+    version: 14.0.0.0rc2
 cycle-highlights:
   - |
     Support for a new hierarchical enforcement model has been implemented in
