Tag nova-powervm Rocky RC2
Creates an RC2 tag to pull in an iSCSI fix [1] that has merged since
RC1 was tagged.

[1] 984b122668161703eee33918d570c61ae9c5b1ca

Change-Id: I564aaae723af6508651e803d04f9c9105617dcc5

--- a/deliverables/rocky/nova-powervm.yaml
+++ b/deliverables/rocky/nova-powervm.yaml
@@ -27,5 +27,10 @@ releases:
       - repo: openstack/nova-powervm
         hash: 9b518d8c9986249a06e3f5dc1450b66283af91f1
         tarball-base: nova_powervm
+  - version: 7.0.0.0rc2
+    projects:
+      - repo: openstack/nova-powervm
+        hash: 984b122668161703eee33918d570c61ae9c5b1ca
+        tarball-base: nova_powervm
 repository-settings:
   openstack/nova-powervm: {}
