--- a/deliverables/rocky/magnum.yaml
+++ b/deliverables/rocky/magnum.yaml
@@ -10,6 +10,10 @@ releases:
       - hash: 0743a561fd1021f651e5d4d98690415bb3a6674f
         repo: openstack/magnum
     version: 7.0.0
+  - projects:
+      - hash: 0dbe6806ed51fdc08e7b118ac10eedd53d365b5b
+        repo: openstack/magnum
+    version: 7.0.1
 branches:
   - name: stable/rocky
     location: 7.0.0
