Fix keystone highlight formatting
Missing space is causing formatted output to not look right.

Change-Id: I3d6367d3385877cc957f5bfb55cbad32dcb114c4
Signed-off-by: Sean McGinnis <sean.mcginnis@gmail.com>

--- a/deliverables/rocky/keystone.yaml
+++ b/deliverables/rocky/keystone.yaml
@@ -37,12 +37,12 @@ cycle-highlights:
     reducing technical debt. Deployments using custom token providers may be
     affected.
   - |
-    Keystone now creates 2 default roles (``member`` and``reader``) in addition
-    to the ``admin`` role upon installation or bootstrap. These roles will be
-    incorporated across other service policies by default in the future as an
-    effort to simplify RBAC across OpenStack. Note that this might have an
-    impact on deployments given case sensitivity issues with role naming. You
-    can read about case sensitivty within keystone in `here
+    Keystone now creates 2 default roles (``member`` and ``reader``) in
+    addition to the ``admin`` role upon installation or bootstrap. These roles
+    will be incorporated across other service policies by default in the future
+    as an effort to simplify RBAC across OpenStack. Note that this might have
+    an impact on deployments given case sensitivity issues with role naming.
+    You can read about case sensitivty within keystone in `here
     <https://docs.openstack.org/keystone/latest/admin/identity-case-insensitive.html>`_.
 repository-settings:
   openstack/keystone: {}
