--- a/deliverables/rocky/barbican-tempest-plugin.yaml
+++ b/deliverables/rocky/barbican-tempest-plugin.yaml
@@ -3,7 +3,15 @@ include-pypi-link: no
 launchpad: barbican
 release-model: cycle-with-intermediary
 release-type: python-pypi
+releases:
+  - projects:
+      - hash: b8bf147bdcdd33f3ad276ca8815fd253ec9b24af
+        repo: openstack/barbican-tempest-plugin
+    version: 0.1.0
+    flags:
+      - forced
 repository-settings:
-  openstack/barbican-tempest-plugin: {}
+  openstack/barbican-tempest-plugin:
+    tarball-base: barbican_tempest_plugin
 team: barbican
 type: tempest-plugin
