--- a/deliverables/_independent/tripleo-upgrade.yaml
+++ b/deliverables/_independent/tripleo-upgrade.yaml
@@ -6,6 +6,8 @@ branches:
     location: 1.0.0
   - name: stable/queens
     location: 2.0.0
+  - name: stable/rocky
+    location: 3.0.0
 releases:
   - projects:
       - hash: 0f37163303a00936b56522e2cc3310e38b87a343
@@ -15,6 +17,10 @@ releases:
       - hash: 40cc25d273619b9e5dd1412ca0a286dfbf9745cf
         repo: openstack/tripleo-upgrade
     version: 2.0.0
+  - projects:
+      - hash: 6b914d2387ec62408eee0e55ad2158e713f93563
+        repo: openstack/tripleo-upgrade
+    version: 3.0.0
 team: tripleo
 type: other
 repository-settings:
