Add release notes links for queens
This adds links to release notes in the Queens release that were added
after the last check.

Change-Id: I2ca6d20588af96905287e43b79138c4cab89f5d8
Signed-off-by: Sean McGinnis <sean.mcginnis@gmail.com>

--- a/deliverables/queens/barbican.yaml
+++ b/deliverables/queens/barbican.yaml
@@ -34,3 +34,4 @@ repository-settings:
 branches:
   - location: 6.0.0.0rc1
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/barbican/queens.html
