--- a/deliverables/queens/networking-ovn.yaml
+++ b/deliverables/queens/networking-ovn.yaml
@@ -58,3 +58,4 @@ cycle-highlights:
   - 'OVN supports IPv6 Router solicitation and IPv6 Periodic router advertisement
     support.'
   - 'OVN supports binding SR-IOV ports on OVS > 2.8 and kernel >=4.8'
+release-notes: https://docs.openstack.org/releasenotes/networking-ovn/queens.html
