--- a/deliverables/queens/python-brick-cinderclient-ext.yaml
+++ b/deliverables/queens/python-brick-cinderclient-ext.yaml
@@ -22,3 +22,4 @@ branches:
     location: 0.8.0
 repository-settings:
   openstack/python-brick-cinderclient-ext: {}
+release-notes: https://docs.openstack.org/releasenotes/python-brick-cinderclient-ext/queens.html
