--- a/deliverables/queens/python-heatclient.yaml
+++ b/deliverables/queens/python-heatclient.yaml
@@ -26,3 +26,4 @@ branches:
     name: stable/queens
 repository-settings:
   openstack/python-heatclient: {}
+release-notes: https://docs.openstack.org/releasenotes/python-heatclient/queens.html
