--- a/deliverables/queens/python-manilaclient.yaml
+++ b/deliverables/queens/python-manilaclient.yaml
@@ -30,3 +30,4 @@ branches:
     name: stable/queens
 repository-settings:
   openstack/python-manilaclient: {}
+release-notes: https://docs.openstack.org/releasenotes/python-manilaclient/queens.html
