--- a/deliverables/queens/storlets.yaml
+++ b/deliverables/queens/storlets.yaml
@@ -21,3 +21,4 @@ branches:
     location: 1.0.0
 repository-settings:
   openstack/storlets: {}
+release-notes: https://docs.openstack.org/releasenotes/storlets/queens.html
