--- a/deliverables/queens/congress-dashboard.yaml
+++ b/deliverables/queens/congress-dashboard.yaml
@@ -27,3 +27,4 @@ repository-settings:
 branches:
   - location: 2.0.0.0rc1
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/congress-dashboard/queens.html
