--- a/deliverables/queens/kuryr.yaml
+++ b/deliverables/queens/kuryr.yaml
@@ -14,3 +14,4 @@ branches:
     location: 0.7.0
 repository-settings:
   openstack/kuryr: {}
+release-notes: https://docs.openstack.org/releasenotes/kuryr/queens.html
