Add release notes links for pike
Adds a couple release notes added after the fact.

Change-Id: Id3db6f14856c05fb6ecf915749aac141892d78d5
Signed-off-by: Sean McGinnis <sean.mcginnis@gmail.com>

--- a/deliverables/pike/python-brick-cinderclient-ext.yaml
+++ b/deliverables/pike/python-brick-cinderclient-ext.yaml
@@ -18,3 +18,4 @@ branches:
     location: 0.5.0
 repository-settings:
   openstack/python-brick-cinderclient-ext: {}
+release-notes: https://docs.openstack.org/releasenotes/python-brick-cinderclient-ext/pike.html
