--- a/deliverables/pike/sahara-dashboard.yaml
+++ b/deliverables/pike/sahara-dashboard.yaml
@@ -18,3 +18,4 @@ releases:
     version: 7.0.2
 repository-settings:
   openstack/sahara-dashboard: {}
+release-notes: https://docs.openstack.org/releasenotes/sahara-dashboard/pike.html
