Requesting release of Sahara Queens 8.0.2
At least 3 relevant bug fixes in sahara.git deserve a release.

Change-Id: I1cfe865e1f856e281091bf5fc57133de5c75d24a

--- a/deliverables/queens/sahara.yaml
+++ b/deliverables/queens/sahara.yaml
@@ -29,6 +29,10 @@ releases:
       - repo: openstack/sahara
         hash: f8f4d45ab4f2ddc757d4ab1d09d2d16ad48d4a58
     version: 8.0.1
+  - projects:
+      - repo: openstack/sahara
+        hash: f8e7026561eb0ab6fa2ad8147e1b771dfb478265
+    version: 8.0.2
 branches:
   - name: stable/queens
     location: 8.0.0.0rc1
