--- a/deliverables/rocky/masakari.yaml
+++ b/deliverables/rocky/masakari.yaml
@@ -22,6 +22,10 @@ releases:
     projects:
       - repo: openstack/masakari
         hash: ad3dc737c984c267980e7479acc2bf8856b556d5
+  - version: 6.0.0.0rc2
+    projects:
+      - repo: openstack/masakari
+        hash: c742bb4973626cac269ec05cafc56543f8d6d5e6
 branches:
   - location: 6.0.0.0rc1
     name: stable/rocky
