--- a/deliverables/rocky/ovsdbapp.yaml
+++ b/deliverables/rocky/ovsdbapp.yaml
@@ -12,6 +12,10 @@ releases:
     projects:
       - repo: openstack/ovsdbapp
         hash: f15d014fc7cb4111c132e7e2b3b3f35e0dbf5e82
+  - projects:
+      - hash: 6419a2e187c2c20930b7af2a5dad29b92f088a6e
+        repo: openstack/ovsdbapp
+    version: 0.12.1
 repository-settings:
   openstack/ovsdbapp: {}
 branches:
