--- a/deliverables/rocky/cinder.yaml
+++ b/deliverables/rocky/cinder.yaml
@@ -28,6 +28,11 @@ releases:
       - hash: 41de06dcf6f1c84b6d4eb2f8d3b4f002d8c67f96
         repo: openstack/cinder
     version: 13.0.0.0rc3
+  - diff-start: 12.0.0.0rc1
+    projects:
+      - hash: 41de06dcf6f1c84b6d4eb2f8d3b4f002d8c67f96
+        repo: openstack/cinder
+    version: 13.0.0
 branches:
   - location: 13.0.0.0rc1
     name: stable/rocky
