--- a/deliverables/rocky/congress.yaml
+++ b/deliverables/rocky/congress.yaml
@@ -20,6 +20,11 @@ releases:
     projects:
       - repo: openstack/congress
         hash: f94581299657db5065a184694393bc186d363e5d
+  - diff-start: 7.0.0.0rc1
+    projects:
+      - repo: openstack/congress
+        hash: f94581299657db5065a184694393bc186d363e5d
+    version: 8.0.0
 branches:
   - location: 8.0.0.0rc1
     name: stable/rocky
