--- a/deliverables/rocky/horizon.yaml
+++ b/deliverables/rocky/horizon.yaml
@@ -24,6 +24,11 @@ releases:
     projects:
       - hash: 0aa126ddd073c9c4774ec82308283dac4ad09460
         repo: openstack/horizon
+  - diff-start: 13.0.0.0rc1
+    projects:
+      - hash: 0aa126ddd073c9c4774ec82308283dac4ad09460
+        repo: openstack/horizon
+    version: 14.0.0
 repository-settings:
   openstack/horizon: {}
 branches:
