--- a/deliverables/rocky/manila.yaml
+++ b/deliverables/rocky/manila.yaml
@@ -20,6 +20,11 @@ releases:
       - hash: a17c89ff0875305e4e90ccc45a696aae9d3864dd
         repo: openstack/manila
     version: 7.0.0.0rc1
+  - diff-start: 6.0.0.0rc1
+    projects:
+      - hash: a17c89ff0875305e4e90ccc45a696aae9d3864dd
+        repo: openstack/manila
+    version: 7.0.0
 repository-settings:
   openstack/manila: {}
 branches:
