--- a/deliverables/rocky/networking-ovn.yaml
+++ b/deliverables/rocky/networking-ovn.yaml
@@ -24,6 +24,11 @@ releases:
       - hash: 44dcb509be15a805e00684cce2fabfc4c5265ad7
         repo: openstack/networking-ovn
     version: 5.0.0.0rc1
+  - diff-start: 4.0.0.0b3
+    projects:
+      - hash: 44dcb509be15a805e00684cce2fabfc4c5265ad7
+        repo: openstack/networking-ovn
+    version: 5.0.0
 branches:
   - location: 5.0.0.0rc1
     name: stable/rocky
