--- a/deliverables/rocky/neutron-lbaas.yaml
+++ b/deliverables/rocky/neutron-lbaas.yaml
@@ -23,6 +23,11 @@ releases:
       - hash: e4a9d3c1dfb06482f90699e60b98a94481af5f75
         repo: openstack/neutron-lbaas
     version: 13.0.0.0rc1
+  - diff-start: 12.0.0
+    projects:
+      - hash: e4a9d3c1dfb06482f90699e60b98a94481af5f75
+        repo: openstack/neutron-lbaas
+    version: 13.0.0
 branches:
   - location: 13.0.0.0rc1
     name: stable/rocky
