--- a/deliverables/rocky/nova.yaml
+++ b/deliverables/rocky/nova.yaml
@@ -31,6 +31,11 @@ releases:
       - hash: 5bff489231c16e62f081267a5b433745dba12ded
         repo: openstack/nova
     version: 18.0.0.0rc3
+  - diff-start: 17.0.0.0rc1
+    projects:
+      - hash: 5bff489231c16e62f081267a5b433745dba12ded
+        repo: openstack/nova
+    version: 18.0.0
 branches:
   - location: 18.0.0.0rc1
     name: stable/rocky
