--- a/deliverables/rocky/congress-dashboard.yaml
+++ b/deliverables/rocky/congress-dashboard.yaml
@@ -21,6 +21,11 @@ releases:
       - repo: openstack/congress-dashboard
         hash: 7570aa4d41837495108fdf5b834966a31f9caf41
     version: 3.0.0.0rc1
+  - diff-start: 2.0.0
+    projects:
+      - repo: openstack/congress-dashboard
+        hash: 7570aa4d41837495108fdf5b834966a31f9caf41
+    version: 3.0.0
 branches:
   - location: 3.0.0.0rc1
     name: stable/rocky
