--- a/deliverables/rocky/glance.yaml
+++ b/deliverables/rocky/glance.yaml
@@ -45,5 +45,10 @@ releases:
     projects:
       - repo: openstack/glance
         hash: 488d2e4fccc399234fd62c127c8ece262111fe93
+  - diff-start: 16.0.0.0rc1
+    projects:
+      - repo: openstack/glance
+        hash: 488d2e4fccc399234fd62c127c8ece262111fe93
+    version: 17.0.0
 repository-settings:
   openstack/glance: {}
