--- a/deliverables/rocky/heat.yaml
+++ b/deliverables/rocky/heat.yaml
@@ -27,5 +27,10 @@ releases:
     projects:
       - repo: openstack/heat
         hash: 207498dea1e9ca23485511cadbbdda85079e391f
+  - diff-start: 10.0.0.0rc1
+    projects:
+      - repo: openstack/heat
+        hash: 207498dea1e9ca23485511cadbbdda85079e391f
+    version: 11.0.0
 repository-settings:
   openstack/heat: {}
