--- a/deliverables/rocky/keystone.yaml
+++ b/deliverables/rocky/keystone.yaml
@@ -24,6 +24,11 @@ releases:
       - hash: c767e254979c96858a81cc4bbe8d9773d4dd539b
         repo: openstack/keystone
     version: 14.0.0.0rc2
+  - diff-start: 13.0.0.0rc1
+    projects:
+      - hash: c767e254979c96858a81cc4bbe8d9773d4dd539b
+        repo: openstack/keystone
+    version: 14.0.0
 cycle-highlights:
   - |
     Support for a new hierarchical enforcement model has been implemented in
