--- a/deliverables/rocky/masakari.yaml
+++ b/deliverables/rocky/masakari.yaml
@@ -26,6 +26,11 @@ releases:
     projects:
       - repo: openstack/masakari
         hash: c742bb4973626cac269ec05cafc56543f8d6d5e6
+  - diff-start: 5.0.0
+    projects:
+      - repo: openstack/masakari
+        hash: c742bb4973626cac269ec05cafc56543f8d6d5e6
+    version: 6.0.0
 branches:
   - location: 6.0.0.0rc1
     name: stable/rocky
