--- a/deliverables/rocky/murano.yaml
+++ b/deliverables/rocky/murano.yaml
@@ -16,6 +16,11 @@ releases:
     projects:
       - repo: openstack/murano
         hash: ba9f53100efa6cb00d9ab3174af0ae984dc7c734
+  - diff-start: 5.0.0.0rc1
+    projects:
+      - repo: openstack/murano
+        hash: ba9f53100efa6cb00d9ab3174af0ae984dc7c734
+    version: 6.0.0
 branches:
   - location: 6.0.0.0rc1
     name: stable/rocky
