--- a/deliverables/rocky/networking-odl.yaml
+++ b/deliverables/rocky/networking-odl.yaml
@@ -24,6 +24,11 @@ releases:
       - hash: ecde0a165f6145d8257fd52d50ee6f417b0b6ff0
         repo: openstack/networking-odl
     version: 13.0.0.0rc1
+  - diff-start: 12.0.0
+    projects:
+      - hash: ecde0a165f6145d8257fd52d50ee6f417b0b6ff0
+        repo: openstack/networking-odl
+    version: 13.0.0
 branches:
   - location: 13.0.0.0rc1
     name: stable/rocky
