--- a/deliverables/rocky/neutron-dynamic-routing.yaml
+++ b/deliverables/rocky/neutron-dynamic-routing.yaml
@@ -23,6 +23,11 @@ releases:
       - hash: ac63f126c6bd0ab12d6cd80077023c3e5c264e98
         repo: openstack/neutron-dynamic-routing
     version: 13.0.0.0rc1
+  - diff-start: 12.0.0.0rc1
+    projects:
+      - hash: ac63f126c6bd0ab12d6cd80077023c3e5c264e98
+        repo: openstack/neutron-dynamic-routing
+    version: 13.0.0
 branches:
   - location: 13.0.0.0rc1
     name: stable/rocky
