--- a/deliverables/rocky/neutron-fwaas.yaml
+++ b/deliverables/rocky/neutron-fwaas.yaml
@@ -27,6 +27,11 @@ releases:
       - hash: 7567c42e99b298201b30593699d1e180e5bfa759
         repo: openstack/neutron-fwaas
     version: 13.0.0.0rc2
+  - diff-start: 12.0.0
+    projects:
+      - hash: 7567c42e99b298201b30593699d1e180e5bfa759
+        repo: openstack/neutron-fwaas
+    version: 13.0.0
 branches:
   - location: 13.0.0.0rc1
     name: stable/rocky
