--- a/deliverables/rocky/neutron-vpnaas.yaml
+++ b/deliverables/rocky/neutron-vpnaas.yaml
@@ -23,6 +23,11 @@ releases:
       - hash: da4fff7e7aa756cd8280e8dd14fb8cccc5777277
         repo: openstack/neutron-vpnaas
     version: 13.0.0.0rc1
+  - diff-start: 12.0.0
+    projects:
+      - hash: da4fff7e7aa756cd8280e8dd14fb8cccc5777277
+        repo: openstack/neutron-vpnaas
+    version: 13.0.0
 branches:
   - location: 13.0.0.0rc1
     name: stable/rocky
