--- a/deliverables/rocky/octavia-dashboard.yaml
+++ b/deliverables/rocky/octavia-dashboard.yaml
@@ -33,6 +33,11 @@ releases:
       - hash: 7ebcf9936fb8d1cc472d0cf81979c49356098cb2
         repo: openstack/octavia-dashboard
     version: 2.0.0.0rc3
+  - diff-start: 1.0.0.0rc1
+    projects:
+      - hash: 7ebcf9936fb8d1cc472d0cf81979c49356098cb2
+        repo: openstack/octavia-dashboard
+    version: 2.0.0
 branches:
   - location: 2.0.0.0rc1
     name: stable/rocky
