--- a/deliverables/rocky/qinling.yaml
+++ b/deliverables/rocky/qinling.yaml
@@ -22,6 +22,11 @@ releases:
     projects:
       - repo: openstack/qinling
         hash: 9d6bd96f9c70e6870fd67c55467526e365fb0ecc
+  - diff-start: aee1b062bab33c7e6a5016a1b569bc2305010a41
+    projects:
+      - repo: openstack/qinling
+        hash: 9d6bd96f9c70e6870fd67c55467526e365fb0ecc
+    version: 1.0.0
 branches:
   - location: 1.0.0.0rc1
     name: stable/rocky
