--- a/deliverables/rocky/sahara-image-elements.yaml
+++ b/deliverables/rocky/sahara-image-elements.yaml
@@ -21,6 +21,11 @@ releases:
     projects:
       - repo: openstack/sahara-image-elements
         hash: 5eeec728593d88bb5a220b43206bf5a071151bbd
+  - diff-start: 8.0.0
+    projects:
+      - repo: openstack/sahara-image-elements
+        hash: 5eeec728593d88bb5a220b43206bf5a071151bbd
+    version: 9.0.0
 branches:
   - name: stable/rocky
     location: 9.0.0.0rc1
