--- a/deliverables/rocky/sahara.yaml
+++ b/deliverables/rocky/sahara.yaml
@@ -24,6 +24,11 @@ releases:
     projects:
       - repo: openstack/sahara
         hash: 7d9483b21c1e45ef4834f3d3d9973d95d181df3c
+  - diff-start: 8.0.0
+    projects:
+      - repo: openstack/sahara
+        hash: 7d9483b21c1e45ef4834f3d3d9973d95d181df3c
+    version: 9.0.0
 branches:
   - name: stable/rocky
     location: 9.0.0.0rc1
