--- a/deliverables/rocky/senlin.yaml
+++ b/deliverables/rocky/senlin.yaml
@@ -22,6 +22,11 @@ releases:
     projects:
       - repo: openstack/senlin
         hash: 1ea42387e4ed841c001e09efbd26677fde428bb7
+  - diff-start: 5.0.0.0b3
+    projects:
+      - repo: openstack/senlin
+        hash: 1ea42387e4ed841c001e09efbd26677fde428bb7
+    version: 6.0.0
 branches:
   - location: 6.0.0.0rc1
     name: stable/rocky
