--- a/deliverables/rocky/trove.yaml
+++ b/deliverables/rocky/trove.yaml
@@ -18,6 +18,11 @@ releases:
       - hash: 4d358c8f5de4f7feda17053fb363be033146c9dc
         repo: openstack/trove
     version: 10.0.0.0rc1
+  - diff-start: 9.0.0
+    projects:
+      - hash: 4d358c8f5de4f7feda17053fb363be033146c9dc
+        repo: openstack/trove
+    version: 10.0.0
 branches:
   - location: 10.0.0.0rc1
     name: stable/rocky
