--- a/deliverables/_independent/reno.yaml
+++ b/deliverables/_independent/reno.yaml
@@ -163,5 +163,9 @@ releases:
       - hash: 5b8e276418e9e93b1256283a035b29a01af1c456
         repo: openstack/reno
     version: 2.9.2
+  - projects:
+      - hash: 9b1c353bd05459a54293e06b3b4f5f0bb04e9ff8
+        repo: openstack/reno
+    version: 2.10.0
 repository-settings:
   openstack/reno: {}
