Mark Rocky as released
Change-Id: I7effdf59feab11fbe6d1368eadf301692e9762d6
Signed-off-by: Sean McGinnis <sean.mcginnis@gmail.com>

--- a/deliverables/series_status.yaml
+++ b/deliverables/series_status.yaml
@@ -6,11 +6,11 @@
     status: development
     date: 2018-08-30
 - name: rocky
-  status: development
+  status: maintained
   initial-release: 2018-08-30
   next-phase:
-    status: maintained
-    date: 2018-08-30
+    status: extended maintenance
+    date: 2019-02-23
 - name: queens
   status: maintained
   initial-release: 2018-02-28
