Mark Ocata as extended maintenance
Change-Id: I7bbef5975e319583d2aa9cc987afd4cb8d69e1d1
Signed-off-by: Sean McGinnis <sean.mcginnis@gmail.com>

--- a/deliverables/series_status.yaml
+++ b/deliverables/series_status.yaml
@@ -24,11 +24,10 @@
     status: extended maintenance
     date: 2019-03-03
 - name: ocata
-  status: maintained
+  status: extended maintenance
   initial-release: 2017-02-22
   next-phase:
-    status: extended maintenance
-    date: 2018-08-27
+    status: unmaintained
 - name: newton
   status: end of life
   initial-release: 2016-10-06
