--- a/deliverables/rocky/neutron.yaml
+++ b/deliverables/rocky/neutron.yaml
@@ -40,9 +40,8 @@ releases:
 cycle-highlights:
   - 'Per TCP/UDP port forwarding on floating IP is supported. Operators can save the
     number of global IP addresses for floating IPs.'
-  - 'Multiple bindings for compute owned ports is supported for better instance migration
-    support. Better live-migration support is a long-standing topic and Nova support
-    will be coming in the next Stein release.'
+  - 'Multiple bindings for compute owned ports is supported for better server
+    live migration support.'
   - 'Perform validation on filter parameters on listing resources. Previously filter
     parameters were unclear for API users. This release improves the API behavior
     on resource filtering and documentation in the Neutron API references a lot.'
