--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -8,6 +8,8 @@
       - ^doc/.*$
 
 - project:
+    templates:
+      - openstack-python35-jobs
     check:
       jobs:
         - openstack-tox-validate:
