--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -10,6 +10,7 @@
 - project:
     templates:
       - openstack-python35-jobs
+      - openstack-python36-jobs
     check:
       jobs:
         - openstack-tox-validate:
@@ -21,6 +22,10 @@
             vars:
               sphinx_python: python3
         - openstack-tox-py35:
+            irrelevant-files:
+              - ^deliverables/.*$
+              - ^doc/.*$
+        - openstack-tox-py36:
             irrelevant-files:
               - ^deliverables/.*$
               - ^doc/.*$
@@ -38,6 +43,10 @@
             vars:
               sphinx_python: python3
         - openstack-tox-py35:
+            irrelevant-files:
+              - ^deliverables/.*$
+              - ^doc/.*$
+        - openstack-tox-py36:
             irrelevant-files:
               - ^deliverables/.*$
               - ^doc/.*$
