--- a/deliverables/series_status.yaml
+++ b/deliverables/series_status.yaml
@@ -1,10 +1,10 @@
 ---
 - name: stein
-  status: future
-  initial-release: 2019-04-11
+  status: development
+  initial-release: 2019-04-10
   next-phase:
-    status: development
-    date: 2018-08-30
+    status: maintained
+    date: 2019-04-10
 - name: rocky
   status: maintained
   initial-release: 2018-08-30
