Cut rocky branch for heat-agents and heat-dashboard
Change-Id: I474fb770042af03826e968b65ace28c508f50ab1

--- a/deliverables/rocky/heat-agents.yaml
+++ b/deliverables/rocky/heat-agents.yaml
@@ -13,5 +13,8 @@ releases:
     projects:
       - repo: openstack/heat-agents
         hash: fdd6a5f537ad39e092f69bc05307ae7640384430
+branches:
+  - name: stable/rocky
+    location: 1.7.0
 repository-settings:
   openstack/heat-agents: {}
