--- a/deliverables/rocky/sahara-tests.yaml
+++ b/deliverables/rocky/sahara-tests.yaml
@@ -1,9 +1,14 @@
 ---
-launchpad: sahara-tests
 team: sahara
 type: tempest-plugin
+storyboard: 940
 release-model: cycle-with-intermediary
 release-type: python-pypi
 release-notes: https://docs.openstack.org/releasenotes/sahara-tests/index.html
+releases:
+  - version: 0.7.0
+    projects:
+      - repo: openstack/sahara-tests
+        hash: bb23a5bd1998d4feefe75e207409e27d0791a5d2
 repository-settings:
   openstack/sahara-tests: {}
