--- a/deliverables/rocky/magnum-ui.yaml
+++ b/deliverables/rocky/magnum-ui.yaml
@@ -11,6 +11,10 @@ releases:
       - hash: cfd93ba5bce986903af3ce113f3ce969390f9d37
         repo: openstack/magnum-ui
     version: 5.0.0
+  - projects:
+      - hash: c23a2d84f4f561adad65e49b0d960edd2fd82194
+        repo: openstack/magnum-ui
+    version: 5.0.1
 repository-settings:
   openstack/magnum-ui: {}
 release-notes: https://docs.openstack.org/releasenotes/magnum-ui/rocky.html
