--- a/deliverables/queens/magnum-ui.yaml
+++ b/deliverables/queens/magnum-ui.yaml
@@ -11,6 +11,10 @@ releases:
       - hash: 7a9e3f754d5af80abb25f437aa9c0da18b4400b9
         repo: openstack/magnum-ui
     version: 4.0.0
+  - projects:
+      - hash: a6d173dcede3ecb97791c09986ddb8177fa45c82
+        repo: openstack/magnum-ui
+    version: 4.0.1
 repository-settings:
   openstack/magnum-ui: {}
 release-notes: https://docs.openstack.org/releasenotes/magnum-ui/queens.html
