--- a/deliverables/queens/magnum.yaml
+++ b/deliverables/queens/magnum.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: 197382de3b110410cea9c4e430df27f9053641cc
         repo: openstack/magnum
     version: 6.1.1
+  - projects:
+      - hash: ff6c64b4265b1abff2eacd08f0c8fc762c2339a1
+        repo: openstack/magnum
+    version: 6.2.0
 branches:
   - name: stable/queens
     location: 6.0.0
